# scholar-summary

./: README.md  academic_api.py  agent.py  config.py  gmail_fetcher.py  main.py  paper_retriever.py  pyproject.toml  run_web.py  scholar_alert_agent.py  user_interests.md
backend/: database.py  main.py  models.py  services.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  DiffViewer.tsx  FailedPapers.tsx  InterestTab.tsx  LogsTerminal.tsx  ModelLoadTerminal.tsx  ReportDetail.tsx  ReportsFeed.tsx  SyncPreview.tsx
reports/: failed_papers.md  report_mosaic_modular_orchestration_for_structured_agenti.md
tests/: test_scholar_alert_agent.py
url/: rules.json
